k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unipark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unipark
  template:
    metadata:
      labels:
        app: unipark
    spec:
      containers:
        - name: unipark
          image: unipark:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
