k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unipark-service
spec:
  selector:
    app: unipark
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
